--- a/react/react_profile/src/components/css/ProfileCard.module.css
+++ b/react/react_profile/src/components/css/ProfileCard.module.css
@@ -1,8 +1,7 @@
 .container {
     display: flex;
-    position: absolute;
-    bottom: 0;
     justify-content: space-between;
+    justify-content: flex-start;
     gap: 10px;
     align-items: center;
     padding: 10px;
