--- a/react/react_profile/src/components/css/SearchEngine.module.css
+++ b/react/react_profile/src/components/css/SearchEngine.module.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     background-color: #202327;
-    width: 60%;
+    /* width: 60%; */
     justify-content: center;
     align-items: center;
     padding: 10px;
