add trending accounts components

--- a/react/react_profile/src/components/css/ShowMoreBtn.module.css
+++ b/react/react_profile/src/components/css/ShowMoreBtn.module.css
@@ -3,7 +3,7 @@
     padding: 10px;
     border: none;
     background-color: #16181c;
-    color: blue;
+    color: #1e8dd8;
     font-weight: 600;
     cursor: pointer;
 }
