--- a/react/react_profile/src/App.module.css
+++ b/react/react_profile/src/App.module.css
@@ -1,28 +1,36 @@
 .container {
   text-align: center;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   background-color: black;
   color: white;
-  /* height: 1000px; */
+  height: 100vh;
 }
 
 .leftSide {
-  flex: 2;
-  position: relative;
-  height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
+  width: 260px;
 }
 
 .centerPage {
-  flex: 4;
-  border: 1px solid grey;
+  width: 600px;
+  border-right: 1px solid #2f3336;
+  border-left: 1px solid #2f3336;
+  overflow-y: scroll;
 }
-
 
 .rightSide {
-  flex: 3;
+  width: 350px;
   padding: 10px 50px 10px 20px;
+  overflow-y: scroll;
 }
+
+.centerPage::-webkit-scrollbar,
+.rightSide::-webkit-scrollbar {
+  width: 0rem;
+}
+
+
