--- a/react/react_profile/src/components/centerSideView/css/AccountCard.module.css
+++ b/react/react_profile/src/components/centerSideView/css/AccountCard.module.css
@@ -4,6 +4,12 @@
     align-items: flex-start;
     padding: 10px;
     text-align: left;
+    transition: background-color 0.3s ease, cursor 0.3s ease; 
+}
+
+.container:hover {
+    cursor: pointer;
+    background-color: #181818;
 }
 
 .matchedFollowers {
