--- a/react/react_profile/src/components/centerSideView/css/ProfileHeader.module.css
+++ b/react/react_profile/src/components/centerSideView/css/ProfileHeader.module.css
@@ -1,7 +1,15 @@
+.container {
+    /* position: relative; */
+}
 .accountName {
     display: flex;
-    gap: 20px;
-    margin-left: 10px;
+    gap: 10px;
+    position: fixed;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff; 
+    z-index: 100; 
+    width: 600px;
 }
 
 .textContent {
@@ -15,11 +23,13 @@
 
 .profileInfo {
     position: relative;
+    margin-top: 60px;
 }
 
 .coverPhoto {
     width: 100%;
     height: 200px;
+    cursor: pointer;
 }
 
 .profilePhoto {
@@ -30,6 +40,7 @@
     bottom: -28%;
     border-radius: 100%;
     border: 3px solid black;
+    cursor: pointer;
 }
 
 .profileBtns {
@@ -45,12 +56,21 @@
     border: 1px solid #50606d;
     border-radius: 100%;
     padding: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, cursor 0.3s ease; 
 }
 
 .notificationBtn {
     border: 1px solid #50606d;
     border-radius: 100%;
     padding: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, cursor 0.3s ease; 
+}
+
+.moreBtn:hover,
+.notificationBtn:hover {
+    background-color: #181919;
 }
 
 .accountName2 {
@@ -89,6 +109,10 @@
     color: #1d9bf0;
 }
 
+.linkAndDate a:hover {
+    text-decoration: underline;
+}
+
 .linkAndDate div {
     display: flex;
     align-items: center;
@@ -101,6 +125,12 @@
     align-items: center;
     gap: 20px;
     font-weight: 500;
+
+}
+
+.followingInfo p:hover {
+    cursor: pointer;
+    text-decoration: underline;
 }
 
 .followingInfo span {
