--- a/react/react_profile/src/components/centerSideView/css/TabsContainer.module.css
+++ b/react/react_profile/src/components/centerSideView/css/TabsContainer.module.css
@@ -1,9 +1,10 @@
 .tabs {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    padding: 10px 10px 2px 10px;
-    border-bottom: 2px solid grey;
+    justify-content: space-evenly;
+    padding: 10px 0px 2px 0px;
+    border-bottom: 1px solid grey;
+    margin-top: 20px;
 }
 
 .tabs input {
@@ -11,11 +12,21 @@
     color: grey;
     background-color: black;
     border: none;
-    font-weight: 600;
-    font-size: 90%;
+    font-size: 15px;
+    width: 25%;
+    padding: 15px;
 }
-.tabs div {
+
+.tabs input:hover {
+    background-color: #181818;
+}
+
+.tabContent {
+    transition: background-color 0.3s ease, cursor 0.3s ease; 
+}
+
+.tabContent:hover {
     cursor: pointer;
-    color: grey;
+    background-color: #181818;
 }
 
