--- a/react/react_profile/src/components/leftSideView/css/NavBtn.module.css
+++ b/react/react_profile/src/components/leftSideView/css/NavBtn.module.css
@@ -3,10 +3,10 @@
     justify-content: flex-start;
     align-items: center;
     gap: 20px;
-    padding-left: 10px;
     cursor: pointer;
     width: fit-content;
     text-decoration: none;
     color: white;
-    height: 40px;
+    height: 45px;
+    font-size: large;
 }
