--- a/react/react_profile/src/components/rightSideView/css/TrendingAccountCard.module.css
+++ b/react/react_profile/src/components/rightSideView/css/TrendingAccountCard.module.css
@@ -3,6 +3,12 @@
     align-items: center;
     justify-content: space-between;
     padding: 0px 10px 0px 10px;
+    transition: background-color 0.3s ease, cursor 0.3s ease; 
+}
+
+.container:hover {
+    cursor: pointer;
+    background-color: #1d1f23;
 }
 
 .container div {
