--- a/react/react_profile/src/views/LeftSide.module.css
+++ b/react/react_profile/src/views/LeftSide.module.css
@@ -1,7 +1,8 @@
 .xLogo {
     width: 40px;
     border-radius: 50%;
-    margin-left: 10px;
+    /* margin-left: 10px; */
+    margin-top: 10px;
 }
 
 .navLinks {
