--- a/react/react_profile/src/components/rightSideView/css/SearchEngine.module.css
+++ b/react/react_profile/src/components/rightSideView/css/SearchEngine.module.css
@@ -6,7 +6,12 @@
     padding: 10px;
     gap: 5px;
     border-radius: 40px;
+    position: fixed;
+    top: 5px;
+    z-index: 100; 
+    width: 330px;
 }
+
 
 .SearchIcon {
     color: #6a6f73;
