--- a/react/react_profile/src/views/css/LeftSide.module.css
+++ b/react/react_profile/src/views/css/LeftSide.module.css
@@ -16,4 +16,9 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    align-items: center;
+}
+
+@media (max-width: 1281px) {
+    /* Your CSS rules for screens with a width less than 1282px go here */
 }
