--- a/react/react_profile/src/views/css/LeftSide.module.css
+++ b/react/react_profile/src/views/css/LeftSide.module.css
@@ -15,5 +15,10 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    align-items: center;
+}
+
+@media (max-width: 1281px) {
+    .upperPart {
+        align-items: center;
+    }
 }
