--- a/react/Warm-Up-Task/src/components/Card.module.css
+++ b/react/Warm-Up-Task/src/components/Card.module.css
@@ -2,9 +2,25 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 300px;
+    width: 400px;
     border: 1px solid rgb(182, 182, 182);
-    padding: 10px;
+    padding: 5px 10px 5px 10px;
     margin-bottom: 5px;
     border-radius: 10px;
 }
+
+.card div {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10px;
+}
+
+.card > div > img {
+    width: 40px;
+}
+
+.card > input {
+    border-radius: 100%;
+}
+
