--- a/react/Warm-Up-Task/src/components/Search.module.css
+++ b/react/Warm-Up-Task/src/components/Search.module.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 20px;
+    border-bottom: 1px solid grey;
 }
 
 .searchIcon {
@@ -13,5 +14,6 @@
 .searchInput {
     padding: 10px;
     width: 250px;
-
+    border: none;
+    outline: none;
 }
