--- a/react/todo_list/client/src/components/css/Card.module.css
+++ b/react/todo_list/client/src/components/css/Card.module.css
@@ -5,8 +5,57 @@
     padding: 5px 10px 5px 10px;
     text-align: left;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
 }
 
 .container:hover {
     background-color: #2f2f2f;
+}
+
+.cardOptions {
+    display: flex;
+    gap: 2px;
+}
+
+.cardOptions > img {
+    width: 18px;
+    cursor: pointer;
+    border-radius: 20px;
+    padding: 3px;
+}
+.cardOptions > img:hover {
+    background-color: #262626;
+}
+
+.editInput {
+    position: absolute;
+    background-color: darkgrey;
+    padding: 5px 10px 5px 10px;
+    border: none;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    top: 0;
+    left: 0;
+}
+
+.editInput > input {
+    outline: none;
+    border: none;
+    background-color: transparent;
+}
+
+.editInput > img {
+    padding: 3px;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease, cursor 0.3s ease; 
+}
+
+.editInput > img:hover {
+    background-color: #262626;
 }
