--- a/react/todo_list/client/src/components/css/NewList.module.css
+++ b/react/todo_list/client/src/components/css/NewList.module.css
@@ -12,10 +12,31 @@
     align-items: center;
     justify-content: space-between;
     position: relative;
+    gap: 10px;
+}
+
+.listTitle > span {
+    padding: 5px 10px 5px 10px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.titleOption  {
+    display: flex;
+    gap: 1px;
+    align-items: center;
 }
 
 .titleOption img {
     width: 18px;
+    cursor: pointer;
+    padding: 3px;
+    border-radius: 10px;
+    transition: background-color 0.3s ease, cursor 0.3s ease; 
+}
+
+.titleOption img:hover {
+    background-color: #2f2f2f;
 }
 
 .newInput {
@@ -40,8 +61,6 @@
     cursor: pointer;
 }
 
-
-
 .newInput img {
     width: 26px;
     cursor: pointer;
@@ -54,3 +73,33 @@
     border-radius: 1px;
 }
 
+
+.editInput {
+    position: absolute;
+    background-color: darkgrey;
+    padding: 5px 10px 5px 10px;
+    border: none;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    top: 0;
+    left: 0;
+}
+
+.editInput > input {
+    outline: none;
+    border: none;
+    background-color: transparent;
+}
+
+.editInput > img {
+    padding: 3px;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease, cursor 0.3s ease; 
+}
+
+.editInput > img:hover {
+    background-color: #262626;
+}
