--- a/react/todo_list/client/src/components/css/ColorPicker.module.css
+++ b/react/todo_list/client/src/components/css/ColorPicker.module.css
@@ -1,13 +1,14 @@
 .container {
     position: absolute;
     background-color: #575757;
-    top: 20px;
+    top: 40px;
     left: 150px;
     width: 100px;
     display: flex;
     flex-direction: column;
     text-align: center;
     border-radius: 10px;
+    z-index: 1000;
 }
 
 .container > span {
