--- a/react/todo_list/client/src/App.module.css
+++ b/react/todo_list/client/src/App.module.css
@@ -1,15 +1,5 @@
-.container {
+.appContainer {
   background-color: #191919;
   color: white;
   min-height: 100vh;
-}
-
-
-.listDisplay {
-  padding: 10px;
-  margin: 10px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  text-align: center;
 }
