--- a/react/todo_list/client/src/components/css/NewList.module.css
+++ b/react/todo_list/client/src/components/css/NewList.module.css
@@ -15,7 +15,7 @@
     gap: 10px;
 }
 
-.listTitle > span {
+.titleAndCount > span {
     padding: 5px 10px 5px 10px;
     border-radius: 10px;
     cursor: pointer;
