--- a/react/todo_list/client/src/views/css/ListsContainer.module.css
+++ b/react/todo_list/client/src/views/css/ListsContainer.module.css
@@ -5,6 +5,20 @@
     border-bottom: 1px solid grey;
 }
 
+.header > h1 {
+    flex: 2;
+    text-align: center;
+}
+
+.headerButtons {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 100px;
+    gap: 10px;
+    flex: 3;
+}
+
 .listsContainer {
     display: flex;
     flex-wrap: wrap;
@@ -12,46 +26,68 @@
     margin: 10px;
 }
 
-.newCategoryBtn {
+.newCategory > img {
     background-color: #0088f0;
     border: none;
-    border-radius: 5px;
+    border-radius: 100%;
     padding: 5px;
     color: white;
     cursor: pointer;
-
 }
 
-.newCategoryBtn:hover {
+.newCategory > img:hover {
     background-color: #0077d4;
 }
 
-.newCategory {
+.newCategoryInput {
     display: flex;
+    align-items: center;
     gap: 10px;
-    padding: 10px;
     background-color: rgb(63, 63, 63);
     border-radius: 10px;
 }
 
-.newCategory > input {
+.newCategoryInput > input {
     border: none;
-    padding: 5px 10px 5px 10px;
+    padding: 10px 5px 5px 10px;
     border-radius: 10px;
     outline: none;
     background-color: transparent;
     color: white;
 }
 
+.doneCloseButtons img {
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 100%;
+    transition: background-color 0.3s ease, cursor 0.3s ease; 
+}
+
+.doneCloseButtons img:hover {
+    cursor: pointer;
+    background-color: #0077d4;
+}
+
+@media (max-width: 982px) {
+    .headerButtons {
+        flex-direction: column;
+        padding-bottom: 10px;
+    }
+}
 @media (max-width: 600px) {
     .header {
         flex-direction: column;
         padding-bottom: 10px;
     }
+
+    .headerButtons {
+        padding-right: 0px;
+    }
 }
 
 @media (max-width: 480px) {
-    .newCategory {
+    .header {
         flex-direction: column;
+        align-items: center;
     }
 }
