--- a/react/note-keeper/client/src/components/css/SearchBar.module.css
+++ b/react/note-keeper/client/src/components/css/SearchBar.module.css
@@ -7,6 +7,12 @@
     gap: 5px;
 }
 
+@media (max-width: 375px) {
+    .searchContainer {
+        width: 90%;
+    }
+}
+
 .searchContainer > input{
     width: 300px;
     border: none;
