--- a/react/note-keeper/client/src/components/css/NoteNewInput.module.css
+++ b/react/note-keeper/client/src/components/css/NoteNewInput.module.css
@@ -9,6 +9,12 @@
     gap: 10px;
 }
 
+@media (max-width: 450px) {
+    .newInputContainer {
+        width: 90%;
+    }
+}
+
 .contentContainer {
     display: flex;
     flex-direction: column;
